[tool.poetry]
name = "fictionaibot"
version = "0.1.0"
description = ""
authors = ["chenjianwei.kenny <chenjianwei.kenny@bytedance.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
rasa-sdk = "3.5.1"
sentence-transformers = "^2.2.2"
ipython = "7.18.1"


[[tool.poetry.source]]
name = "ali"
url = "https://mirrors.aliyun.com/pypi/simple"
priority = "default"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
